fix header on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,17 @@
   .vert-container {
     flex-direction: column;
   }
+
+  .App-title {
+    font-size: 0.8em;
+  }
+
+  .App-header {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
 
 .copyright {
